// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for avatar with fallback 1`] = `
<span
  class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
  data-slot="avatar"
>
  <span
    class="bg-muted flex size-full items-center justify-center rounded-full"
    data-slot="avatar-fallback"
  >
    JD
  </span>
</span>
`;

exports[`Avatar Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for avatar with image 1`] = `
<span
  class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
  data-slot="avatar"
/>
`;

exports[`Avatar Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for complete avatar 1`] = `
<span
  class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
  data-slot="avatar"
>
  <span
    class="bg-muted flex size-full items-center justify-center rounded-full"
    data-slot="avatar-fallback"
  >
    JD
  </span>
</span>
`;

exports[`Avatar Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for default avatar 1`] = `
<span
  class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
  data-slot="avatar"
/>
`;

exports[`Avatar Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for multiple avatars 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      JD
    </span>
  </span>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      AB
    </span>
  </span>
</div>
`;
